--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+td {
+  border: 1px solid #000;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+td.label {
+  width: 30%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-flow: row wrap;
 }
 
-.App-link {
-  color: #61dafb;
+li {
+  padding: 5px;
+  border-radius: 2px;
+  margin:0 0 2px 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.estados_sem_processos  li { background-color: green; }
+.estados_com_processos  li { background-color: red; }
+.estados_indeterminados li { background-color: orange; }
+
+td.emitido_em, td.fonte, td.protocolo, td.arquivo, td.nada_consta {
+  width: 20%;
+}
+
+table.certidoes tr:first-child,
+table.processos td:first-child {
+  background-color: #efefef;
 }
